syntax = "proto3";

option go_package = "github.com/jeremyhahn/go-trusted-platform-attestation/proto";
// option java_multiple_files = true;
// option java_package = "com.jeremyhahn.go-trusted-platform.attestation";
// option java_outer_classname = "AttestationProto";

package proto;


service InsecureAttestor {
  rpc GetCABundle (CABundleRequest) returns (CABundleReply) {}
}

message CABundleRequest {
  bytes bundle = 1;
}

message CABundleReply {
  bytes bundle = 1;
}

message Null {
}



service TLSAttestor {
  rpc GetEKCert(Null) returns (EKCertReply) {}
  rpc Close(Null) returns (Null) {}
}

message EKCertReply {
  bytes certificate = 1;
}




// service Attestor {
//   rpc GetPlatformCert (GetPlatformCertRequest) returns (GetPlatformCertResponse) { }
//   rpc GetEKCert (GetEKCertRequest) returns (GetEKCertResponse) { }
//   rpc GetAK (GetAKRequest) returns (GetAKResponse) { }
//   rpc ActivateCredential (ActivateCredentialRequest) returns (ActivateCredentialResponse) { }
//   rpc Quote (QuoteRequest) returns (QuoteResponse) { }
//   rpc Attest (AttestRequest) returns (AttestResponse) { }
//   rpc PushSecret (PushSecretRequest) returns (PushSecretResponse) { }
//   rpc PullRSAKey (PullRSAKeyRequest) returns (PullRSAKeyResponse) { }      
// }

// enum SecretType {
//   RAW = 0;
//   RSA = 1;
//   AES = 2;
// }  

// message GetPlatformCertRequest {
//   string uid = 1;
// }

// message GetPlatformCertResponse {
//   string uid = 1;
//   bytes platformCert = 2;
// }

// message GetEKCertRequest {
//   string uid = 1;
// }

// message GetEKCertResponse {
//   string uid = 1;
//   bytes ekCert = 2;
//   bytes ekPub = 3;
// }

// message GetAKRequest {
//   string uid = 1;
// }

// message GetAKResponse {
//   string uid = 1;
//   bytes ekPub = 2;
//   bytes akName = 3;  
//   bytes akPub = 4;
// }

// message ActivateCredentialRequest {
//   string uid = 1;
//   bytes credBlob = 2;
//   bytes encryptedSecret = 3;
// }

// message ActivateCredentialResponse {
//   string uid = 1;
//   bytes secret = 2;
// }

// message QuoteRequest {
//   string uid = 1;
//   repeated int32 pcrs = 2;
//   string secret =3;
// }

// message QuoteResponse {
//   string uid = 1;
//   bytes attestation = 2;
//   bytes signature = 3;
//   bytes eventlog = 4;  
// }

// message AttestRequest {
//   string uid = 1;
//   string secret =3;
// }

// message AttestResponse {
//   string uid = 1;
//   bytes attestation = 2; 
// }

// message PushSecretRequest {
//   string uid = 1;
//   SecretType secret_type = 2;
//   bytes importBlob = 3;  
// }

// message PushSecretResponse {
//   string uid = 1;
//   bytes verification = 2;  
// }

// message PullRSAKeyRequest {
//   string uid = 1;
//   repeated int32 pcrs = 2;
// }

// message PullRSAKeyResponse {
//   string uid = 1;
//   bytes tpm_public_key = 2;
//   bytes test_signature = 3;
//   bytes attestation_signature = 4;
//   bytes attestation = 5;
// }